--- a/Survey_Answers.ipynb
+++ b/Survey_Answers.ipynb
@@ -11,6 +11,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "####Generating Survey Answers\n",
+        "\n",
+        "This is a script for automatically generating answers to survey questions for Software Security, one of the key tasks I had to do as an Instructional Aide for the subject. Here we use models like gemini, openai and a RAG for generating answers to questions asked by students in a survey."
+      ],
+      "metadata": {
+        "id": "Fn32qAEP7Hj1"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -127,7 +138,7 @@
         "from abc import ABC, abstractmethod\n",
         "\n",
         "class chatAPI(ABC):\n",
-        "\n",
+        "    \"\"\"Abstract base class for using LLM APIs\"\"\"\n",
         "    @abstractmethod\n",
         "    def generate_answer(self):\n",
         "        pass"
@@ -142,12 +153,19 @@
       "cell_type": "code",
       "source": [
         "class gemini(chatAPI):\n",
-        "\n",
-        "  def __init__(self,key):\n",
+        "  \"\"\" This is the class for using Gemini API\"\"\"\n",
+        "  def __init__(self,modelname='gemini-pro'):\n",
+        "    \"\"\"\n",
+        "    Takes in model name, default is gemini-pro to use.\n",
+        "    \"\"\"\n",
         "    self.config=genai.configure(api_key=os.getenv('GOOGLE_API_KEY'))\n",
-        "    self.model = genai.GenerativeModel('gemini-pro')\n",
+        "    self.model = genai.GenerativeModel(modelname)\n",
         "\n",
         "  def generate_answer(self,text):\n",
+        "    \"\"\"\n",
+        "    Takes in question for which to generate answer for.\n",
+        "    returns answer\n",
+        "    \"\"\"\n",
         "    try:\n",
         "      response = self.model.generate_content(text+\"answer the question in short\")\n",
         "    except:\n",
@@ -165,14 +183,19 @@
       "cell_type": "code",
       "source": [
         "class openai(chatAPI):\n",
-        "\n",
+        "  \"\"\" This is the class for using OpenAI API\"\"\"\n",
         "  def __init__(self):\n",
         "    self.client=OpenAI(api_key=os.getenv('API_KEY'))\n",
         "\n",
-        "  def generate_answer(self,text):\n",
+        "  def generate_answer(self,text,model_name=\"gpt-3.5-turbo\"):\n",
+        "    \"\"\"\n",
+        "    Takes in question for which to generate answer for and model name,\n",
+        "    default is gpt-3.5-turbo to use.\n",
+        "    returns answer\n",
+        "    \"\"\"\n",
         "    try:\n",
         "      response = self.client.chat.completions.create(\n",
-        "              model=\"gpt-3.5-turbo\",\n",
+        "              model=model_name,\n",
         "              messages=[\n",
         "                  {\"role\": \"system\", \"content\": \"\"},\n",
         "                  {\"role\": \"user\", \"content\": text+\"answer the question in short\"}\n",
@@ -193,19 +216,27 @@
       "cell_type": "code",
       "source": [
         "class Rag(chatAPI):\n",
-        "\n",
+        "  \"\"\" This is the class for using RAG\"\"\"\n",
         "  def __init__(self):\n",
         "    os.environ[\"OPENAI_API_KEY\"] = os.getenv('API_KEY')\n",
         "    self.qa_chain=None\n",
         "\n",
         "  def set_rag(self,pdfile=\"websec.pdf\",pagenos=[0,-1],persistdir=\"chromadb\"):\n",
+        "    \"\"\"\n",
+        "    Initializes RAG pipeline with pdf as knowledge base.\n",
+        "    Can specify pagenos to use for the base default is first and last.\n",
+        "    Can change persist dir which is used to store vector database.\n",
+        "    \"\"\"\n",
+        "    #load pdf and split it into document chunks\n",
         "    loader = PyPDFLoader(pdfile)\n",
         "    pages = loader.load()\n",
         "    pages=pages[pagenos[0]:pagenos[-1]]\n",
         "    rsplit=RecursiveCharacterTextSplitter(chunk_size=512, chunk_overlap=128, separators=['\\n\\n','\\n','\\. '])\n",
         "    docs=rsplit.split_documents(pages)\n",
+        "    #create vector database using chunks and embeddings\n",
         "    embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
         "    db = Chroma.from_documents(docs, embeddings, persist_directory=persistdir)\n",
+        "    #creating the RAG chain using, llm , vectordb and prompt template\n",
         "    llm=OpenAI(model='gpt-3.5-turbo-instruct',temperature=0)\n",
         "    template = \"\"\"Use the following pieces of context if relevant to answer the question at the end.\n",
         "               {context}\n",
@@ -220,7 +251,10 @@
         "    )\n",
         "\n",
         "  def generate_answer(self,text):\n",
-        "\n",
+        "    \"\"\"\n",
+        "    Takes in question for which to generate answer for.\n",
+        "    returns answer\n",
+        "    \"\"\"\n",
         "    try:\n",
         "      response = self.qa_chain({\"query\":text})\n",
         "    except Exception as e:\n",
@@ -560,7 +594,8 @@
     {
       "cell_type": "code",
       "source": [
-        "df[\"Original Question\"]=df[\"Original Question\"].apply(lambda s: str(s))"
+        "#preprocessing the column to string format\n",
+        "df[\"Narrowed Down Question\"]=df[\"Narrowed Down Question\"].apply(lambda s: str(s))"
       ],
       "metadata": {
         "id": "WupH2CV_U7Ys"
@@ -571,30 +606,8 @@
     {
       "cell_type": "code",
       "source": [
-        "df[\"Answer\"]=df[\"Answer\"].apply(lambda s: str(s))"
-      ],
-      "metadata": {
-        "id": "hRnUSU6gzYJp"
-      },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df[\"Narrowed Down Question\"]=df[\"Narrowed Down Question\"].apply(lambda s: str(s))"
-      ],
-      "metadata": {
-        "id": "dDASXHPe8D0h"
-      },
-      "execution_count": 16,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from dotenv import load_dotenv\n",
-        "\n",
+        "#Load the environment file which contains the api keys\n",
         "load_dotenv('turmerik.env')"
       ],
       "metadata": {
@@ -621,6 +634,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# creating rag object and initializing the RAG chain using set_rag method\n",
         "rag=Rag()\n",
         "rag.set_rag()"
       ],
@@ -735,6 +749,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# adding answers generated by rag to the dataframe\n",
         "df[\"rag_answer\"]=df[\"Narrowed Down Question\"].apply(lambda s: rag.generate_answer(s)  if pd.notna(s) else None)"
       ],
       "metadata": {
@@ -759,6 +774,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#saving the dataframe\n",
         "df.to_excel(\"Survey_ Module 6 Survey Student Analysis Report_QAfilled.xlsx\")"
       ],
       "metadata": {
